<resources>
    <string name="app_name">WheelsPUJ</string>
    <string name="Login_USER">Login User</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="accept">Buscar pasajeros</string>
    <string name="hyperlink_userRegister"><a> Registrate aquí</a></string>
    <string name="search">Buscar viajes</string>
    <string name="email_hint">Correo</string>
    <string name="password_hint">Contraseña</string>
    <string name="user">Nombre de usuario:</string>
    <string name="email">Correo:</string>
    <string name="historial">Historial de viajes</string>
    <string name="phone">Telefono</string>
    <string name="password_hyperlink"> <a href="https://www.google.com/">Olvido su contraseña?</a> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="entries">
        <item>HAS-213</item>
        <item>BBS-113</item>
        <item>AAS-213</item>
        <item>DDS-213</item>
        <item>ASS-213</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Register_title">Registro</string>
    <string name="hint_nameInput">Nombres</string>
    <string name="name_inputHint">Nombres</string>
    <string name="suname_inputHint">Apellidos</string>
    <string name="phone_inputHint">Teléfono</string>
    <string name="email_inputHint">Correo</string>
    <string name="password_inputHint">Contraseña</string>
    <string name="repeatpassword_inputHint">Confirme su contraseña</string>
    <string name="login_user">Registrar</string>
    <string name="passengerOption">Pasajero</string>
    <string name="driverOption">Conductor</string>
    <string name="rolTextTextView">Seleccione su rol</string>
        <string name="back4app_server_url">https://parseapi.back4app.com/</string>

        <!-- Change BOTH strings as required -->
        <string name="back4app_app_id">gQpX3BUJv6mQjw5KurMZur5ToSdZ94ZVonFjxQas</string>
        <string name="back4app_client_key">jMRfoiqT6Crp3lExnAojwY9T5ndb9RA6EfnONlzK</string>
</resources>