<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassengerFormFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/Register_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/inputform"
        android:gravity="center"
        android:hint="@string/name_inputHint"
        android:textAlignment="gravity"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <EditText
        android:id="@+id/textView8"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputform"
        android:gravity="center"
        android:hint="@string/suname_inputHint"
        android:textAlignment="gravity"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputform"
        android:gravity="center"
        android:hint="@string/phone_inputHint"
        android:textAlignment="gravity"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/textView10"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputform"
        android:gravity="center"
        android:hint="@string/email_inputHint"
        android:textAlignment="gravity"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/textView11"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputform"
        android:gravity="center"
        android:hint="@string/password_inputHint"
        android:textAlignment="gravity"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/textView12"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/inputform"
        android:gravity="center"
        android:hint="@string/repeatpassword_inputHint"
        android:textAlignment="gravity"
        android:textColorHint="#757575"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />






</androidx.constraintlayout.widget.ConstraintLayout>