<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/email_icon"
        android:hint="@string/email_hint"
        android:textColorHint="@color/black"
        android:paddingBottom="15dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/password_icon"
        android:hint="@string/password_hint"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/logginButtonn"

        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/form_background"
        android:text="Ingresar" />

    <TextView
        android:id="@+id/linkNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_hyperlink" />



</LinearLayout>