<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".Profile">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:background="@drawable/rounded_button"
            android:id="@+id/imageView"
            android:layout_width="230dp"
            android:adjustViewBounds="true"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/mexican" />

        <ImageButton
            android:id="@+id/pickImage"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="bottom|right"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email" />

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>