<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="77dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="354dp"
        android:layout_height="600dp"
        android:background="@drawable/form_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877">

        <TextView
            android:id="@+id/textViewRol"
            android:layout_width="218dp"
            android:layout_height="29dp"
            android:gravity="center_vertical"
            android:text="@string/rolTextTextView"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/opciones_rol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/opciones_rol"
            android:layout_width="302dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputform"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/logginButtonn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radio_passenger"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/passengerOption" />

            <RadioButton
                android:id="@+id/radio_driver"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:checked="false"

                android:text="@string/driverOption" />
        </RadioGroup>

        <Button
            android:id="@+id/logginButtonn"
            android:layout_width="243dp"
            android:layout_height="54dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/form_background"
            android:text="@string/login_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>